--- a/BBRemoteMobile/app/src/main/res/values/strings.xml
+++ b/BBRemoteMobile/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BB Remote</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_input">InputActivity</string>
 </resources>
