--- a/BBRemoteMobile/app/src/main/res/values/strings.xml
+++ b/BBRemoteMobile/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">BB Remote</string>
+
+    <!-- Strings related to menu actions -->
     <string name="action_settings">Settings</string>
     <string name="title_activity_input">InputActivity</string>
     <string name="menu_input_modes">Input Modes ></string>
@@ -17,6 +19,106 @@
     <string name="action_connection">Connection</string>
     <string name="title_activity_customize_gamepad">CustomizeGamepadActivity</string>
     <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to keyboard key labels -->
+    <string name="key_0">0</string>
+    <string name="key_1">1</string>
+    <string name="key_2">2</string>
+    <string name="key_3">3</string>
+    <string name="key_4">4</string>
+    <string name="key_5">5</string>
+    <string name="key_6">6</string>
+    <string name="key_7">7</string>
+    <string name="key_8">8</string>
+    <string name="key_9">9</string>
+    <string name="key_a">a</string>
+    <string name="key_b">b</string>
+    <string name="key_c">c</string>
+    <string name="key_d">d</string>
+    <string name="key_e">e</string>
+    <string name="key_f">f</string>
+    <string name="key_g">g</string>
+    <string name="key_h">h</string>
+    <string name="key_i">i</string>
+    <string name="key_j">j</string>
+    <string name="key_k">k</string>
+    <string name="key_l">l</string>
+    <string name="key_m">m</string>
+    <string name="key_n">n</string>
+    <string name="key_o">o</string>
+    <string name="key_p">p</string>
+    <string name="key_q">q</string>
+    <string name="key_r">e</string>
+    <string name="key_s">s</string>
+    <string name="key_t">t</string>
+    <string name="key_u">u</string>
+    <string name="key_v">v</string>
+    <string name="key_w">w</string>
+    <string name="key_x">x</string>
+    <string name="key_y">y</string>
+    <string name="key_z">z</string>
+    <string name="key_ctrl">Ctrl</string>
+    <string name="key_alt">Alt</string>
+    <string name="key_del">Del</string>
+    <string name="key_win">Win</string>
+    <string name="key_tab">Tab</string>
+    <string name="key_esc">Esc</string>
+    <string name="key_print_screen">PrtSc</string>
+    <string name="key_scroll_lock">ScrL</string>
+    <string name="key_pause">Brk</string>
+    <string name="key_insert">INS</string>
+    <string name="key_home">Home</string>
+    <string name="key_end">End</string>
+    <string name="key_page_up">PgUp</string>
+    <string name="key_page_down">PgDn</string>
+    <string name="key_f1">F1</string>
+    <string name="key_f2">F2</string>
+    <string name="key_f3">F3</string>
+    <string name="key_f4">F4</string>
+    <string name="key_f5">F5</string>
+    <string name="key_f6">F6</string>
+    <string name="key_f7">F7</string>
+    <string name="key_f8">F8</string>
+    <string name="key_f9">F9</string>
+    <string name="key_f10">F10</string>
+    <string name="key_f11">F11</string>
+    <string name="key_f12">F12</string>
+    <string name="key_exclamation">!</string>
+    <string name="key_at">\@</string>
+    <string name="key_number">#</string>
+    <string name="key_dollar">$</string>
+    <string name="key_forward_slash">/</string>
+    <string name="key_exponent">^</string>
+    <string name="key_and">&amp;</string>
+    <string name="key_times">*</string>
+    <string name="key_left_parentheses">(</string>
+    <string name="key_right_parentheses">)</string>
+    <string name="key_dash">-</string>
+    <string name="key_apostrophe">\'</string>
+    <string name="key_quote">\"</string>
+    <string name="key_colon">:</string>
+    <string name="key_semicolon">;</string>
+    <string name="key_comma">,</string>
+    <string name="key_question">\?</string>
+    <string name="key_period">.</string>
+    <string name="key_plus">+</string>
+    <string name="key_equal">=</string>
+    <string name="key_less_than">&lt;</string>
+    <string name="key_greater_than">&gt;</string>
+    <string name="key_left_brace">{</string>
+    <string name="key_right_brace">}</string>
+    <string name="key_left_bracket">[</string>
+    <string name="key_right_bracket">]</string>
+    <string name="key_percent">%</string>
+    <string name="key_tilda">~</string>
+    <string name="key_grave">`</string>
+    <string name="key_underscore">_</string>
+    <string name="key_back_slash">\\</string>
+    <string name="key_vertical_line">|</string>
+    <string name="key_mode_1">1/3</string>
+    <string name="key_mode_2">2/3</string>
+    <string name="key_mode_3">3/3</string>
+    <string name="key_caps">Caps</string>
 
     <!-- Strings related to Settings -->
 
