Closed #1. Also tied Keyboard functionality into bluetooth send data calls. Added return to ConnectionActivity if disconnected from desktop client when sending key presses. Made BluetoothTransmitter not crash for now when there is no connection. In the future the sendData function should never be called when the socket variable has not been initialized.

--- a/BBRemoteMobile/app/src/main/res/values/strings.xml
+++ b/BBRemoteMobile/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="key_o">o</string>
     <string name="key_p">p</string>
     <string name="key_q">q</string>
-    <string name="key_r">e</string>
+    <string name="key_r">r</string>
     <string name="key_s">s</string>
     <string name="key_t">t</string>
     <string name="key_u">u</string>
