ConnectionActivity mostly done. Still needs testing of valid connection and proper behaviour on connection lost. Need Windows side bluetooth to be fixed in order to test this.

--- a/BBRemoteMobile/app/src/main/res/values/strings.xml
+++ b/BBRemoteMobile/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="action_dual_camera">Background Camera</string>
     <string name="action_dual_none">None</string>
     <string name="action_connection">Connection</string>
+    <string name="action_scan">Scan</string>
     <string name="title_activity_customize_gamepad">CustomizeGamepadActivity</string>
     <string name="title_activity_settings">Settings</string>
 
