Loading and saving done for customize gamepad. Also added ability to delete gamepad inputs on long press.

--- a/BBRemoteMobile/app/src/main/res/values/strings.xml
+++ b/BBRemoteMobile/app/src/main/res/values/strings.xml
@@ -19,6 +19,10 @@
     <string name="action_connection">Connection</string>
     <string name="action_scan">Scan</string>
     <string name="action_add_input">Add Input</string>
+    <string name="action_save_layout">Save Layout</string>
+    <string name="action_load_layout">Load Layout</string>
+    <string name="action_delete_input">Delete Input</string>
+    <string name="action_cancel_delete">Cancel</string>
     <string name="title_activity_customize_gamepad">CustomizeGamepadActivity</string>
     <string name="title_activity_settings">Settings</string>
 
